syntax = "proto3";

package admanager.coreplatformintegration.service.v1;

message AuthRequest {
  oneof auth_method {
    Credentials credentials = 1;
    string token = 2;
  }
}

message Credentials {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  bool is_authenticated = 1;
  optional string user_id = 2;
  optional string session_token = 3;
  optional string error_message = 4;
}